--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,7 +15,7 @@
         />
     </div>
     <div class="form-group">
-        <label for="password">Bitch Password</label>
+        <label for="password">Password</label>
         <input 
             type="password" 
             class="form-control" 
