--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -25,7 +25,7 @@
         />
     </div>
     <div class="form-group">
-        <label for="password1">Bitch Password</label>
+        <label for="password1">Password</label>
         <input 
             type="password" 
             class="form-control" 
