--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,8 +2,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<form method="POST" action="/" enctype="multipart/form-data">
-    <input type="file" name="pdf" accept="application/pdf"/>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+<h1>
+    This is the home page.
+</h1>
 {% endblock %}
