--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
             crossorigin="anonymous"
         />
         <title>{% block title %}Home{% endblock %}</title>
+        <link rel="stylesheet" href="home.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -61,7 +62,7 @@
         {% endif %}
         {% endwith %}
 
-        <div class="container">
+        <div class="container" style="display: flex; justify-content: center;">
         {% block content %}
         {% endblock %}
         </div>    
