--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -2,7 +2,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<form method="POST" action="/" enctype="multipart/form-data">
+<form method="POST" action="/upload" enctype="multipart/form-data">
     <input type="file" name="pdf" accept="application/pdf"/>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
